--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
     <p>welcome</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
