--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     <p>welcome</p>
+
+    <ol id="messages"></ol>
+    <form id="message-form">
+        <input name="message" type="text" placeholder="write">
+        <button>send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
